Updates to Ui added full screen album mode
Dual View Mode Implementation
Added a toggle between full-screen album view and detailed view
Created distinct UI layouts optimized for different use cases
Implemented smooth transitions between views with appropriate controls
Album View Optimization
Reduced album card size (max-width: 400px) for better screen fit
Adjusted album art height (250-300px) to prevent clipping
Removed unnecessary elements (progress bar, seeking) for a cleaner interface
Added dedicated text area with proper padding for track information
Set repeat playback to be enabled by default in album view
Detailed View Enhancements
Added horizontal padding to text elements for improved readability
Replaced text buttons with icon buttons for a more compact interface
Maintained comprehensive controls while improving visual hierarchy
Ensured consistent styling between mobile and desktop layouts
Visual Refinements
Removed borders from album cards for a more modern look
Improved button visibility and placement across all views
Enhanced text contrast and spacing for better readability
Maintained consistent color scheme with orange accents on dark background
Responsive Design
Ensured proper display on various screen sizes
Optimized layouts for both mobile and desktop experiences
Implemented appropriate spacing and sizing for all UI elements
Technical Implementation
Used React's state management for view toggling and player controls
Leveraged Mantine UI components for consistent styling
Implemented useCallback for performance optimization
Added proper dependency management in useEffect hooks
Ensured clean ESLint compliance by removing unused imports

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,6 +23,11 @@
         color: white;
       }
       
+      /* Ensure consistent background colors */
+      .mantine-Card-root, .mantine-Paper-root {
+        background-color: #1A1B1E !important;
+      }
+      
       /* Direct styling for player controls */
       .mantine-ActionIcon-root[data-color="orange"] {
         color: #ff922b !important;
